[package]
name = "blips_playground"
version = "0.1.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
blips = { path = "../blips" }
dotenv = "0.15.0"
tokio = { version = "1.32.0", features = ["full"] }
